test/Fail/Issue3188/Issue3188a.agda
module Issue3188.Issue3188a where

postulate String : Set
{-# BUILTIN STRING String #-}
